--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Option 2: Import via CSS */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 body{
     background-color: #F1D0D6;
     background-repeat: no-repeat;
@@ -6,15 +9,71 @@ body{
     background-size: cover;
 }
 
-navbar navbar-expand-lg navbar-light bg-light{
+.container-services {
+   position: relative;
+   width: 30%;
+}
+
+
+#searchbar {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    width: 50%;
+    box-sizing: border-box;
+}
+
+#list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+    position: absolute;
+}
+
+.services {
+    font-size: 1.2em;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+.services:last-child {
+    border-bottom: none;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+}
+
+
+ 
+.container-fluid{
     background-color: #A8A8A8;
-    opacity: 0.9;
+    margin-bottom:0;
+    margin-top: 0;
 }
 .nav-item{
     background-color: transparent;
     color: black;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 15px;
     border: none;
     list-style-type: none;
     display: inline-block;
@@ -40,8 +99,8 @@ navbar navbar-expand-lg navbar-light bg-light{
 
 .col-md-6 h3{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 30px;
-    opacity: 0.9;
+    font-size: 20px;
+    opacity: 1.2;
     text-align: center;
 }
 
@@ -64,11 +123,20 @@ navbar navbar-expand-lg navbar-light bg-light{
     border-radius: 10px;
 }
 
+.col-md-4 h2{
+    font-size:30px;
+    font-weight: bold;
+}
+
+.col-md-4{
+ font-size: 60%;
+}
+
 footer{
     background-color: #A8A8A8;
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     margin-top: 20px;
     opacity: 0.9;
 }
